# pyguiappimage

./: guiapp.py  pyproject.toml
src/pyguiapp/: __init__.py  __main__.py  convert.py
