[build-system]
required = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyguiapp"
version = "0.0.1"
description = "Test app"
readme = "README.md"
authors = [{ name = "Martin Askestad", email="MartinAskestad+users@github.com" }]
license = { file = "LICENSE" }
classifiers = []
keywords = []
dependencies = []
required-python = ">=3.8"


